--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,6 +37,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
+    <div id="portal"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
   </body>
 </html>
